# text-hackaton

./: .gitignore  .lefthook.yml  README.md  main.py  pyproject.toml
src/text_hackathon/: __init__.py  helpers.py
